--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 		</aside>
 		<section>
 			<img id ="mainimg" src="/home/veer/Desktop/practice/priyaresumepic(1).jpeg"><br>
-			<img id="phone" src="/home/veer/Desktop/practice/location.jpeg">:huddinge stockholm<br>
+			<img id="phone" src="/home/veer/Desktop/practice/location.jpeg">:<br>
 			<img id="phone" src="/home/veer/Desktop/practice/email.jpeg">:<a href=https://mail.google.com/mail/							     >priyareddysvm@gmail.com</a><br>
-			<img id="phone" src="/home/veer/Desktop/practice/phone blue.jpeg">:722141091<br>
+			<img id="phone" src="/home/veer/Desktop/practice/phone blue.jpeg">:<br>
 			<a href="https://github.com/priyareddysvm" target="_blank" rel="noopener noreferrer"><img id ="smimg" src="/home/veer/Desktop/practice/git.jpg"></a>
 			<a href="https://www.linkedin.com/in/priya-reddy-3b7528213/" target="_blank" rel="noopener noreferrer"><img id ="smimg" src="https://image.flaticon.com/icons/png/512/174/174857.png"></a>
 			
